[gd_scene load_steps=14 format=2]

[ext_resource path="res://Materials/rocketBody.tres" type="Material" id=1]
[ext_resource path="res://Materials/rocketTip.tres" type="Material" id=2]
[ext_resource path="res://Resources/rocket.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Resources/shield.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Materials/shield.tres" type="Material" id=6]
[ext_resource path="res://Resources/fire_texture.png" type="Texture" id=7]

[sub_resource type="CapsuleShape" id=1]
height = 2.50384

[sub_resource type="Curve" id=2]
max_value = 10.0
bake_resolution = 1000
_data = [ Vector2( 0, 1.31818 ), 0.0, 0.0, 0, 0, Vector2( 0.424051, 2.68182 ), -12.4485, -12.4485, 0, 0, Vector2( 1, 0 ), 3.26446, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
direction = Vector3( 0, 0, 1 )
spread = 0.0
gravity = Vector3( 0, 0, -10 )
initial_velocity = 73.96
linear_accel = 45.98
angle = 360.0
angle_random = 1.0
scale_curve = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 2, 0, 0, 1 )
albedo_texture = ExtResource( 7 )

[sub_resource type="PlaneMesh" id=6]
material = SubResource( 5 )
size = Vector2( 0.4, 0.4 )

[node name="Player" type="Area"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.8, 0, 0, 0, -1.30337e-07, 0.8, 0, -0.8, -1.30337e-07, 0, 0, 0 )
mesh = ExtResource( 3 )
material/0 = ExtResource( 1 )
material/1 = ExtResource( 2 )
material/2 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.747407 )
shape = SubResource( 1 )

[node name="MeshInstanceShield" type="MeshInstance" parent="."]
transform = Transform( 1.96797, 0, 0, 0, -8.4527e-08, 1.93375, 0, -3.70932, -1.6214e-07, 0, 0, -0.242757 )
visible = false
mesh = ExtResource( 5 )
material/0 = ExtResource( 6 )

[node name="TimerShield" type="Timer" parent="."]
one_shot = true

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.812301 )
cast_shadow = 0
amount = 100
lifetime = 0.05
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 6 )
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="TimerShield" to="." method="_on_TimerShield_timeout"]
